modif rapport partie création

--- a/rapport/intro.tex
+++ b/rapport/intro.tex
@@ -17,11 +17,11 @@ Ces techniques, tout d'abord utilisées dans le domaine du marketing, le secteur
 L'inter\^et de telles techniques tient particulièrement au fait qu'elles n'ont pas besoin de connaître une hypothèse de départ pour obtenir des résultats exploitables. En effet, cette méthode d'analyse utilise un pré-traitement des données qui permet la structuration et donc l'extraction de connaissances de façon plus aisée. Le pré-traitement en question se déroule en plusieurs étapes, celles-ci sont:
 %Contrairement aux méthodes statistiques souvent utilisées, le data mining n'a pas besoin de connaître une hypothèse de départ pour arriver à des résultats. En effet, cette méthode  d'analyse de données utilise un pré-traitement des données qui permet la structuration et donc l'extraction de connaissances de façon beaucoup plus aisée. Le pré-traitement en question est divisé en plusieurs étapes. Celles-ci sont :
 \begin{description}
-\item[extraction] afin de récupérer les données à partir de sources, potentiellement multiples, hétérogènes et externes si cela n'a pas été fait au préalable.
-\item[nettoyage] pour détecter les anomalies éventuellement présentes dans le jeu de données constitué et d'y remédier.
-\item[transformation des données] afin de convertir tout les formats présents en un seul et unique, pour une utilisation optimale.
+\item[L'extraction] afin de récupérer les données à partir de sources, potentiellement multiples, hétérogènes et externes si cela n'a pas été fait au préalable.
+\item[Le nettoyage] pour détecter les anomalies éventuellement présentes dans le jeu de données constitué et d'y remédier.
+\item[La transformation des données] afin de convertir tout les formats présents en un seul et unique, pour une utilisation optimale.
 \end{description}
 
-À la suite de cela, on peut aborder la création de l'entrepôt de données (Data-Wharehouse) soit le chargement des données avec entre autre le tri de ces dernières selon certains critères préalablement définit que nous expliquerons plus en détails par la suite.
+À la suite de cela, on peut aborder la création de l'entrepôt de données (Data-Wharehouse) soit le chargement des données avec entre autre le tri de ces dernières selon certains critères préalablement définis que nous expliquerons plus en détails par la suite.
 
 Enfin, une fois toutes ces opérations réalisées, on pourra s'occuper de la création des groupes de données (clusters) contenant des protéines similaires suivant le ou les critères choisis.
