fin du code et du rapport

--- a/rapport/conclu.tex
+++ b/rapport/conclu.tex
@@ -1,3 +1,10 @@
 \section*{Conclusion}
 
 \addcontentsline{toc}{chapter}{Conclusion}
+
+Il appara\^it que certains clusters contiennent un nombre de protéines étonnament important par rapport aux autres. Il serait intéressant d'étudier les protéines présentes dans ces clusters afin de déterminer des propriétés communes autres que les critères que nous avons sélectionnés.
+Les problèmes rencontrés fasse aux listes de localisation soulèvent l'intér\^et de ce niveau de clusterisation, mais dont l'absence engendrerait des clusters contenant trop de protéines. \\
+De plus, lors de l'application de l'agorithme AGNES, nous nous arr\^etons à quatre clusters. Cependant, s'arr\^eter à un niveau différent aurait p\^u permettre d'obtenir des résultats plus probants, mais une telle approche nécessitait des tests impossibles à réaliser dans le temps imparti.\\
+
+Pour conclure, suivant les critères sélectionnés et les techniques choisies, les clusters finaux contiennent des protéines semblables.\\
+M\^eme si les résultats obtenus semblent peu satisfaisant, ce projet nous a permis de réaliser une approche immersive du datamining que nous risquons de rencontrer de nouveau dans notre vie professionnelle.
