--- a/rapport/intro.tex
+++ b/rapport/intro.tex
@@ -6,7 +6,7 @@
 
 %Le sujet de notre projet est le suivant : "Recherche de protéines similaires". Pour cela nous utiliserons la technique de data mining assimilée tout au long des TD.
 
-Dans le cadre de l'UE Data Mining, nous avons pour projet de réaliser une étude sur la question suivante : "Quelles sont les protéines similaires" en utilisant les techniques et informations obtenues tout au long des cours et travaux dirigés.
+Dans le cadre de l'UE Data Mining, nous avons pour projet de réaliser une étude sur la question suivante : "Quelles sont les protéines semblables" en utilisant les techniques et informations obtenues tout au long des cours et travaux dirigés.
 %Le sujet de notre projet est le suivant : "Recherche de protéines similaires". Pour cela nous utiliserons la technique de data mining assimilée tout au long des TD.
 
 Le data mining, ou exploration de données, est une technique ayant pour but d'extraire des informations particulières ou des motifs intéressants à partir d'une grande quantité de données à l'aide de plusieurs types de méthodes.
