--- a/rapport/rapport.tex
+++ b/rapport/rapport.tex
@@ -13,7 +13,7 @@
 \usepackage{titlesec}
 \usepackage{cite}
 \usepackage{pdfpages}
-\usepackage[version=3]{mhchem}
+%\usepackage[version=3]{mhchem}
 %\usepackage[left=2cm,right=2cm,top=2cm,bottom=2cm]{geometry}
 
 %%%%%%%%%%%%%%%%%encadrementdes chapitres%%%%%%%%%%%%%%%%%%%%%%%
