modif table des matières

--- a/rapport/creation.tex
+++ b/rapport/creation.tex
@@ -62,15 +62,15 @@ Ses tables sont en fait des dictionnaires dans lesquels la clé est le numéro d
 Nous avons choisi 6 critères.
 
 \subsection*{Taille de la chaîne}
-\addcontentsline{toc}{subsection}{Taille de la cha\^ine}
+%\addcontentsline{toc}{subsection}{Taille de la cha\^ine}
 Les protéines sont constituées d'une succession d'acides aminés reliés entre eux par des liaisons peptidiques. La taille d'une protéine est ainsi définie par le nombre d'acides aminés qu'elle contient. Cette taille étant très variable, les protéines ayant des tailles très différentes n'auront pas les m\^emes propriétés, ce critère constitue donc un bon premier niveau de clusterisation.
 
 \subsection*{Structure tridimensionnelle}
-\addcontentsline{toc}{subsection}{Structure tridimensionnelle}
+%\addcontentsline{toc}{subsection}{Structure tridimensionnelle}
 Une protéine peut être décrite par un enchaînement de structures secondaires (hélices alpha, feuillets beta et coude) qui ont une influence sur son repliement.\\
 
 \subsection*{Hydrophobicité}
-\addcontentsline{toc}{subsection}{Hydrophobicité}
+%\addcontentsline{toc}{subsection}{Hydrophobicité}
 L'hydrophobicité d'une protéine est déterminée à partir du nombre d'acides aminés hydrophobes qu'elle possède.
 Nous avons calculé un index d'hydrophobicité (GRAVY: Grand average of hydropathicity index,Kyte and Doolittle) qui indique la solubilité d'une protéine. Si la valeur est positive, la protéine est hydrophobe, sinon elle est hydrophile.
 Son caractère hydrophobe ou hydrophile influence :
@@ -81,12 +81,12 @@ Son caractère hydrophobe ou hydrophile influence :
 
 
 \subsection*{Nombre de cystéines}
-\addcontentsline{toc}{subsection}{Nombre de cystéines}
+%\addcontentsline{toc}{subsection}{Nombre de cystéines}
 Les ponts disulfures se forment au sein d'une protéine entre deux cystéines et créent des liaisons inter-chaines. Ils ont donc une influence sur la structure tridimensionnelle de la protéine.\\
 %La formation des clusters de cystéine suit le m\^eme procédé que celui de la structure tridimensionnelle. Nous arr\^etons la formation lorsque chaque cluster d'hydrophobcité a été divisé en quatre.
 
 \subsection*{pHi}
-\addcontentsline{toc}{subsection}{pHi}
+%\addcontentsline{toc}{subsection}{pHi}
 Le pHi est le pH isoéléctrique d'une protéine, c'est à dire le pH auquel cette protéine a une charge nulle et donc limite son déplacement dans un champ électrique physiologique.
 Au dessus de ce pH, la protéine est chargée négativement (pH basique) et inversement, en dessous elle est chargée positivement (pH acide).\\
 Lorsqu'une protéine est dans un milieu égal à son pHi cela met en évidence différentes propriétés, telles que:
@@ -98,7 +98,7 @@ Lorsqu'une protéine est dans un milieu égal à son pHi cela met en évidence d
 %La formation des clusters de pHi suit le m\^eme procédé que celui des précédentes formations. Nous arr\^etons la formation lorsque chaque cluster de cystéines a été divisé en quatre.
 
 \subsection*{Localisation}
-\addcontentsline{toc}{subsection}{Localisation}
+%\addcontentsline{toc}{subsection}{Localisation}
 Les protéines sont des constituants de nos organes et participent à la composition de la matrice de chacun de nos organes, tissus ainsi que nos cellules.\\
 Une protéine a des fonctions déterminées qui peuvent être utiles dans différents organes, voisins ou non. 
 
